--- a/asset/scss/themes/_style-1.scss
+++ b/asset/scss/themes/_style-1.scss
@@ -1,13 +1,13 @@
 @import "../bootstrap/variables";
-$header-height: 50px !default;
-$header-bg: #3399fe !default;
+$header-height: 65px !default;
+$header-bg: #3eb7f3 !default;
 $sidebar-width: 140px !default;
-$sidebar-bg: #fff !default;
-$sidebar-text-color: #bbb !default;
-$sidebar-nav-hover: #f5f5f5 !default;
-$sidebar-nav-active: #f39c12 !default;
+$sidebar-bg: #1d252e !default;
+$sidebar-text-color: #9aa7af !default;
+$sidebar-nav-hover: #242e39 !default;
+$sidebar-nav-active: #242e39 !default;
 $text-color: #34495e !default;
-$main-content-bg: #f5f5f5 !default;
+$main-content-bg: #f0f5f7 !default;
 
 html,
 body {
