--- a/asset/scss/_fonts.scss
+++ b/asset/scss/_fonts.scss
@@ -1,5 +1,5 @@
 // @import "fonts/fontawesome";
 @import "fonts/iconfont";
-@import "fonts/hbyicon";
+// @import "fonts/hbyicon";
 @import "fonts/glyphicons";
 // @import "fonts/themify";
