--- a/asset/scss/themes/_style-1.scss
+++ b/asset/scss/themes/_style-1.scss
@@ -789,6 +789,7 @@ ul.sub-menu li ul.sub-menu li ul.sub-menu li a {
 .page-panel {
     height: 100%;
     padding-bottom: 75px;
+    overflow: hidden;
 }
 .page-content{
     height: 100%;
