--- a/src/viewport/asset/index.scss
+++ b/src/viewport/asset/index.scss
@@ -722,7 +722,7 @@ ul.sub-menu li ul.sub-menu li ul.sub-menu li a {
     text-decoration: none;
     background-color: transparent;
     background-image: none;
-    filter: progid: DXImageTransform.Microsoft.gradient(enabled=false);
+    // filter: progid: DXImageTransform.Microsoft.gradient(enabled=false);
     cursor: not-allowed;
 }
 
