--- a/src/alert/asset/index.scss
+++ b/src/alert/asset/index.scss
@@ -88,6 +88,9 @@
 .lego-alert-with-description.lego-alert-no-icon {
     padding: 16px;
 }
+.alert.lego-alert-no-icon {
+    padding: 8px 48px 8px 16px;
+}
 .lego-alert-close-icon {
     font-size: 12px;
     position: absolute;
