--- a/src/viewport/asset/index.scss
+++ b/src/viewport/asset/index.scss
@@ -1,6 +1,6 @@
 $header-height: 65px !default;
 $header-bg: #3eb7f3 !default;
-$header-hover-bg: #3399fe !default;
+$header-hover-bg: #40a5ed !default;
 $sidebar-width: 140px !default;
 $sidebar-bg: #1d252e !default;
 $sidebar-text-color: #9aa7af !default;
