--- a/src/table/asset/index.scss
+++ b/src/table/asset/index.scss
@@ -585,3 +585,147 @@ tr.lego-table-expanded-row:hover {
 .lego-table.lego-table-scroll-position-right .lego-table-fixed-right {
     box-shadow: none;
 }
+
+.lego-checkbox {
+    white-space: nowrap;
+    cursor: pointer;
+    outline: none;
+    display: inline-block;
+    line-height: 1;
+    position: relative;
+    vertical-align: middle;
+}
+
+.lego-checkbox-wrapper:hover .lego-checkbox .lego-checkbox-inner,
+.lego-checkbox:hover .lego-checkbox-inner,
+.lego-checkbox-focused .lego-checkbox-inner {
+    border-color: #108ee9;
+}
+
+.lego-checkbox-inner {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border: 1px solid #d9d9d9;
+    border-radius: 3px;
+    background-color: #fff;
+    -webkit-transition: all .3s;
+    transition: all .3s;
+}
+
+.lego-checkbox-inner:after {
+    -webkit-transform: rotate(45deg) scale(0);
+    -ms-transform: rotate(45deg) scale(0);
+    transform: rotate(45deg) scale(0);
+    position: absolute;
+    left: 4px;
+    top: 1px;
+    display: table;
+    width: 5px;
+    height: 8px;
+    border: 2px solid #fff;
+    border-top: 0;
+    border-left: 0;
+    content: ' ';
+    -webkit-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6);
+    transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6);
+}
+
+.lego-checkbox-input {
+    position: absolute;
+    left: 0;
+    z-index: 1;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.lego-checkbox-indeterminate .lego-checkbox-inner:after {
+    content: ' ';
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    position: absolute;
+    left: 2px;
+    top: 5px;
+    width: 8px;
+    height: 1px;
+}
+
+.lego-checkbox-checked .lego-checkbox-inner:after {
+    -webkit-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+    position: absolute;
+    left: 4px;
+    top: 1px;
+    display: table;
+    width: 5px;
+    height: 8px;
+    border: 2px solid #fff;
+    border-top: 0;
+    border-left: 0;
+    content: ' ';
+    -webkit-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+    transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+}
+
+.lego-checkbox-checked .lego-checkbox-inner,
+.lego-checkbox-indeterminate .lego-checkbox-inner {
+    background-color: #108ee9;
+    border-color: #108ee9;
+}
+
+.lego-checkbox-disabled.lego-checkbox-checked .lego-checkbox-inner:after {
+    -webkit-animation-name: none;
+    animation-name: none;
+    border-color: #ccc;
+}
+
+.lego-checkbox-disabled .lego-checkbox-inner {
+    border-color: #d9d9d9 !important;
+    background-color: #f3f3f3;
+}
+
+.lego-checkbox-disabled .lego-checkbox-inner:after {
+    -webkit-animation-name: none;
+    animation-name: none;
+    border-color: #f3f3f3;
+}
+
+.lego-checkbox-disabled + span {
+    color: #ccc;
+    cursor: not-allowed;
+}
+
+.lego-checkbox-wrapper {
+    cursor: pointer;
+    font-size: 12px;
+    display: inline-block;
+}
+
+.lego-checkbox-wrapper:not(:last-child) {
+    margin-right: 8px;
+}
+
+.lego-checkbox-wrapper + span,
+.lego-checkbox + span {
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.lego-checkbox-group {
+    font-size: 12px;
+}
+
+.lego-checkbox-group-item {
+    display: inline-block;
+}
