--- a/asset/less/index.css
+++ b/asset/less/index.css
@@ -2876,10 +2876,10 @@ samp {
             transform: scale(0.8);
   }
 }
-.ant-motion-collapse {
+.lego-motion-collapse {
   overflow: hidden;
 }
-.ant-motion-collapse-active {
+.lego-motion-collapse-active {
   -webkit-transition: height 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: height 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
