--- a/src/alert/asset/index.less
+++ b/src/alert/asset/index.less
@@ -1,4 +1,4 @@
-@import "../../style/themes/default";
+@import "../../../asset/less/themes/default";
 
 @alert-prefix-cls: ~"@{ant-prefix}-alert";
 
