--- a/src/viewport/asset/index.scss
+++ b/src/viewport/asset/index.scss
@@ -6,7 +6,7 @@ $sidebar-bg: #1d252e !default;
 $sidebar-text-color: #9aa7af !default;
 $sidebar-nav-hover: #242e39 !default;
 $sidebar-nav-active: #242e39 !default;
-$text-color: #34495e !default;
+$text-color: #666 !default;
 $main-content-bg: #f0f5f7 !default;
 html,
 body {
