--- a/asset/scss/bootstrap/_variables.scss
+++ b/asset/scss/bootstrap/_variables.scss
@@ -105,7 +105,7 @@ $border-width: 1px !default;
 // Settings for the `<body>` element.
 
 $body-bg:    #fff !default;
-$body-color: $gray-dark !default;
+$body-color: $gray-light !default;
 
 
 // Links
@@ -182,7 +182,7 @@ $line-height-base: 1.5 !default;
 $font-size-h1: 2.5rem !default;
 $font-size-h2: 2rem !default;
 $font-size-h3: 1.75rem !default;
-$font-size-h4: 1.5rem !default;
+$font-size-h4: 1.2rem !default;
 $font-size-h5: 1.25rem !default;
 $font-size-h6: 1rem !default;
 
@@ -687,7 +687,7 @@ $modal-inner-padding:         15px !default;
 $modal-dialog-margin:         10px !default;
 $modal-dialog-sm-up-margin-y: 30px !default;
 
-$modal-title-padding:         15px !default;
+$modal-title-padding:         14px !default;
 $modal-title-line-height:     $line-height-base !default;
 
 $modal-content-bg:               #fff !default;
