--- a/asset/scss/fonts/_anticon.scss
+++ b/asset/scss/fonts/_anticon.scss
@@ -1,8 +1,11 @@
 @font-face {
   font-family: 'anticon';
-  src: url('https://at.alicdn.com/t/font_r5u29ls31bgldi.eot');
+  src: url('../fonts/anticon/anticon.eot');
   /* IE9*/
-  src: url('https://at.alicdn.com/t/font_r5u29ls31bgldi.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('https://at.alicdn.com/t/font_r5u29ls31bgldi.woff') format('woff'), /* chrome、firefox */ url('https://at.alicdn.com/t/font_r5u29ls31bgldi.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('https://at.alicdn.com/t/font_r5u29ls31bgldi.svg#iconfont') format('svg');
+  src: url('../fonts/anticon/anticon.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ 
+  url('../fonts/anticon/anticon.woff') format('woff'), /* chrome、firefox */ 
+  url('../fonts/anticon/anticon.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ 
+  url('../fonts/anticon/anticon.svg#iconfont') format('svg');
   /* iOS 4.1- */
 }
 .anticon {
