--- a/src/search/asset/index.scss
+++ b/src/search/asset/index.scss
@@ -1,6 +1,30 @@
+@import "../../../asset/scss/bootstrap/variables";
+
+.search input,
+.search input:focus {
+    height: 36px;
+    padding: 7px 12px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.search .search-button{
+	padding: 7px 12px;
+	background: #f3f3f3;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+}
+.search .search-button i{
+	color: #999;
+}
+.search .search-button:hover i{
+	color: #0275d8;
+}
 .search .dropdown-toggle{
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
 	max-width: 120px;
+	padding: 7px 10px;
+    // margin-right: -2px !important;
+    border-color: rgba(0,0,0,.15);
 }
