完善下拉选择框组件

--- a/src/search/asset/index.scss
+++ b/src/search/asset/index.scss
@@ -9,8 +9,10 @@
 }
 .search .search-button{
 	padding: 7px 12px;
-	background: #f3f3f3;
-    border: 1px solid rgba(0,0,0,.15);
+	// background: #f3f3f3;
+    border: 1px solid #ddd;
+    background: #fff;
+    border-left: none;
     border-radius: 4px;
 }
 .search .search-button i{
@@ -26,5 +28,9 @@
 	max-width: 120px;
 	padding: 7px 10px;
     // margin-right: -2px !important;
-    border-color: rgba(0,0,0,.15);
+    border: 1px solid #ddd;
+}
+.search.input-group .search-input:active, .input-group .search-input:focus, .input-group .search-input:hover{
+    border: 1px solid #ddd;
+    border-right: none;
 }
