--- a/asset/scss/bootstrap/_variables.scss
+++ b/asset/scss/bootstrap/_variables.scss
@@ -326,7 +326,7 @@ $input-bg:                       #fff !default;
 $input-bg-disabled:              $gray-lighter !default;
 
 $input-color:                    $gray !default;
-$input-border-color:             rgba(0,0,0,.15) !default;
+$input-border-color:             #ddd !default; //rgba(0,0,0,.15) !default;
 $input-btn-border-width:         $border-width !default; // For form controls and buttons
 $input-box-shadow:               inset 0 1px 1px rgba(0,0,0,.075) !default;
 
@@ -468,7 +468,7 @@ $dropdown-link-hover-bg:         #f5f5f5 !default;
 $dropdown-link-active-color:     $component-active-color !default;
 $dropdown-link-active-bg:        $component-active-bg !default;
 
-$dropdown-link-disabled-color:   $gray-light !default;
+$dropdown-link-disabled-color:   #999 !default; //$gray-light !default;
 
 $dropdown-item-padding-x:        1.5rem !default;
 
