--- a/src/datepicker/asset/index.scss
+++ b/src/datepicker/asset/index.scss
@@ -7,9 +7,19 @@
 }
 
 .input-group.date .form-control:focus,
-.input-group.date .form-control:focus + .input-group-addon,
+.input-group.date .form-control:focus ~ .input-group-addon,
 .input-group.date .input-group-addon:focus,
 .input-group.date .input-group-addon:active,
 {
     border-color: #66afe9;
+}
+
+.input-group.date .form-control:focus ~ .input-group-addon {
+    border-left: none !important;
+}
+
+.endDate {
+    border-radius: .25rem !important;
+    border-bottom-left-radius: 0 !important;
+    border-top-left-radius: 0 !important;
 }
