--- a/asset/scss/_fonts.scss
+++ b/asset/scss/_fonts.scss
@@ -1,4 +1,4 @@
-// @import "fonts/fontawesome";
+@import "fonts/fontawesome";
 @import "fonts/iconfont";
 @import "fonts/anticon";
 @import "fonts/glyphicons";
