--- a/asset/scss/fonts/_glyphicons.scss
+++ b/asset/scss/fonts/_glyphicons.scss
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Glyphicons Halflings';
-    src: url('../fonts/glyphicons.eot');
-    src: url('../fonts/glyphicons.eot?#iefix') format("embedded-opentype"),
-    url('../fonts/glyphicons.woff2') format("woff2"),
-    url('../fonts/glyphicons.woff') format("woff"),
-    url('../fonts/glyphicons.ttf') format("truetype"),
-    url('../fonts/glyphicons.svg#glyphicons') format("svg");
+    src: url('../fonts/glyphicons/glyphicons.eot');
+    src: url('../fonts/glyphicons/glyphicons.eot?#iefix') format("embedded-opentype"),
+    url('../fonts/glyphicons/glyphicons.woff2') format("woff2"),
+    url('../fonts/glyphicons/glyphicons.woff') format("woff"),
+    url('../fonts/glyphicons/glyphicons.ttf') format("truetype"),
+    url('../fonts/glyphicons/glyphicons.svg#glyphicons') format("svg");
 }
 
 .glyphicon {
