--- a/asset/scss/fonts/_hbyicon.scss
+++ b/asset/scss/fonts/_hbyicon.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'hbyicon';
-  src:  url('../fonts/hbyicon.eot');
-  src:  url('../fonts/hbyicon.eot#iefix') format('embedded-opentype'),
-    url('../fonts/hbyicon.ttf') format('truetype'),
-    url('../fonts/hbyicon.woff') format('woff'),
-    url('../fonts/hbyicon.svg#hbyicon') format('svg');
+  src:  url('../fonts/hbyicon/hbyicon.eot');
+  src:  url('../fonts/hbyicon/hbyicon.eot#iefix') format('embedded-opentype'),
+    url('../fonts/hbyicon/hbyicon.ttf') format('truetype'),
+    url('../fonts/hbyicon/hbyicon.woff') format('woff'),
+    url('../fonts/hbyicon/hbyicon.svg#hbyicon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
