--- a/asset/scss/fonts/_themify.scss
+++ b/asset/scss/fonts/_themify.scss
@@ -2,11 +2,11 @@
   // Import the fonts
   @font-face {
     font-family: 'themify';
-    src: url('../fonts/themify.eot?-fvbane');
-    src: url('../fonts/themify.eot?#iefix-fvbane') format('embedded-opentype'), 
-    url('../fonts/themify.woff?-fvbane') format('woff'), 
-    url('../fonts/themify.ttf?-fvbane') format('truetype'), 
-    url('../fonts/themify.svg?-fvbane#themify') format('svg');
+    src: url('../fonts/themify/themify.eot?-fvbane');
+    src: url('../fonts/themify/themify.eot?#iefix-fvbane') format('embedded-opentype'), 
+    url('../fonts/themify/themify.woff?-fvbane') format('woff'), 
+    url('../fonts/themify/themify.ttf?-fvbane') format('truetype'), 
+    url('../fonts/themify/themify.svg?-fvbane#themify') format('svg');
     font-weight: 400;
     font-style: normal
   }
