--- a/asset/scss/_fonts.scss
+++ b/asset/scss/_fonts.scss
@@ -1,5 +1,6 @@
-@import "fonts/fontawesome";
-@import "fonts/iconfont";
+// @import "../../node_modules/font-awesome/sass/font-awesome";
+// @import "fonts/themify";
 @import "fonts/anticon";
 @import "fonts/glyphicons";
-// @import "fonts/themify";
+@import "fonts/iconfont";
+@import "fonts/hbyicon";
