--- a/asset/scss/fonts/_fontawesome.scss
+++ b/asset/scss/fonts/_fontawesome.scss
@@ -2,13 +2,13 @@
   // Import the fonts
   @font-face {
     font-family: 'FontAwesome';
-    src: url('../fonts/fontawesome-webfont.eot');
+    src: url('../fonts/fontawesome/fontawesome-webfont.eot');
     src:
-    url('../fonts/fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'),
-    url('../fonts/fontawesome-webfont.woff2') format('woff2'),
-    url('../fonts/fontawesome-webfont.woff') format('woff'),
-    url('../fonts/fontawesome-webfont.ttf') format('truetype'),
-    url('../fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
+    url('../fonts/fontawesome/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/fontawesome/fontawesome-webfont.woff2') format('woff2'),
+    url('../fonts/fontawesome/fontawesome-webfont.woff') format('woff'),
+    url('../fonts/fontawesome/fontawesome-webfont.ttf') format('truetype'),
+    url('../fonts/fontawesome/fontawesome-webfont.svg?#fontawesomeregular') format('svg');
     font-weight: normal;
     font-style: normal
   }
