--- a/src/datepicker/asset/index.scss
+++ b/src/datepicker/asset/index.scss
@@ -1,5 +1,6 @@
 .input-group.date .input-group-addon {
     background-color: transparent !important;
+    color: #999;
 }
 
 .input-group.date .form-control.dp-input {
