--- a/src/selects/asset/index.scss
+++ b/src/selects/asset/index.scss
@@ -18,6 +18,9 @@
     border-right: 0.3em solid transparent;
     border-left: 0.3em solid transparent;
 }
+.has-danger .select:after {
+    display: none;
+}
 .select .select-input:focus{
     border-color: #66afe9!important;
 }
