增加进度条、穿梭框和上传组件

--- a/asset/scss/bootstrap/_variables.scss
+++ b/asset/scss/bootstrap/_variables.scss
@@ -48,11 +48,11 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             #0275d8 !default;
-$brand-success:             #5cb85c !default;
-$brand-info:                #5bc0de !default;
-$brand-warning:             #f0ad4e !default;
-$brand-danger:              #d9534f !default;
+$brand-primary:             #03a9f4 !default;
+$brand-success:             #48d9a1 !default;
+$brand-info:                #00bcd4 !default;
+$brand-warning:             #fdd835 !default;
+$brand-danger:              #f85774 !default;
 $brand-inverse:             $gray-dark !default;
 
 
