--- a/src/tree/asset/index.scss
+++ b/src/tree/asset/index.scss
@@ -19,6 +19,9 @@
     white-space: nowrap;
     outline: 0
 }
+.ztree li li:hover {
+    background-color: #f4f9fc;
+}
 
 .ztree li ul {
     margin: 0;
