--- a/src/upload/asset/index.scss
+++ b/src/upload/asset/index.scss
@@ -5,7 +5,15 @@
     font-size: 16px;
     display: inline-block;
 }
-.upload .upload-item {
+.upload .cancelbtn{
+    zoom: 0.8;
+}
+.upload .closebtn{
+    zoom: 0.8;
+    display: none;
+}
+.upload .upload-item {    
+    position: relative;
     padding: 8px;
     border-radius: 3px;
     margin-top: 8px;
@@ -14,7 +22,8 @@
 }
 
 .upload .upload-item:hover {
-    background-color: #f3f3f3;
+    // background-color: #ececec;
+    border-color: #c5c5c5;
 }
 
 .upload .upload-item .media-left i {
@@ -23,13 +32,19 @@
 }
 
 .upload .upload-item .media-body .media-heading {
+    margin-right: 40px;
     font-size: 14px;
     font-weight: normal;
     margin-bottom: 8px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .upload .upload-item .media-body .media-heading .right {
-    float: right;
+    // float: right;    
+    position: absolute;
+    top: 8px;
+    right: 8px;
 }
 
 .upload .upload-item .media-body .media-heading .right a {
@@ -46,7 +61,11 @@
 }
 
 .upload .upload-item .media-body small time {
-    float: right;
+    display: none;
+    margin-left: 15px;
+}
+.upload .upload-item .media-body small time a{  
+    margin-left: 5px;
 }
 
 .upload .upload-item .media-body .progress {
@@ -61,4 +80,9 @@
 .upload .upload-item .media-body .progress-bar {
     -webkit-box-shadow: none;
     box-shadow: none;
+}
+
+.upload .upload-item:hover .closebtn,
+.upload .upload-item:hover small time{
+    display: inline-block;
 }
