--- a/src/search/asset/index.scss
+++ b/src/search/asset/index.scss
@@ -1,5 +1,3 @@
-@import "../../../asset/scss/bootstrap/variables";
-
 .search input,
 .search input:focus {
     height: 36px;
@@ -7,33 +5,49 @@
     -webkit-box-shadow: none;
     box-shadow: none;
 }
-.search .search-button{
-	padding: 7px 12px;
-	// background: #f3f3f3;
+
+.search .search-button {
+    padding: 7px 12px;
+    // background: #f3f3f3;
     border: 1px solid #ddd;
     background: #fff;
     border-left: none;
     border-radius: 4px;
 }
-.search .search-button i{
-	color: #999;
+
+.search .search-button i {
+    color: #999;
 }
-.search .search-button:hover i{
-	color: #0275d8;
+
+.search .search-button:hover i {
+    color: #0275d8;
 }
-.search .dropdown-toggle{
-	text-overflow: ellipsis;
-	overflow: hidden;
-	white-space: nowrap;
-	max-width: 120px;
-	padding: 7px 10px;
+
+.search .dropdown-toggle {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 120px;
+    padding: 7px 10px;
     // margin-right: -2px !important;
     border: 1px solid #ddd;
 }
-.search.input-group .search-input:active, .input-group .search-input:focus, .input-group .search-input:hover{
+
+.search.input-group .search-input {
     border-right: none;
 }
+
+.search.input-group .search-input:active,
+.input-group .search-input:focus,
+.input-group .search-input:hover {
+    border-right: none;
+}
+
 .input-group.search .search-input:focus,
-.input-group.search .search-input:focus ~ .input-group-btn .btn{
+.input-group.search .search-input:focus ~ .input-group-btn .btn {
     border-color: #66afe9 !important;
+}
+.input-group.search .input-group-btn:not(:first-child)>.btn,
+.input-group.search .input-group-btn:not(:first-child)>.btn-group {
+    margin-left: -2px;
 }
