--- a/src/viewport/asset/index.scss
+++ b/src/viewport/asset/index.scss
@@ -664,12 +664,10 @@ ul.sub-menu li ul.sub-menu li ul.sub-menu li a {
     list-style: none;
     font-size: 14px;
     text-align: left;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    border-color: #ccc;
+    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     background-clip: padding-box;
 }
 
