--- a/src/tree/asset/index.scss
+++ b/src/tree/asset/index.scss
@@ -1,16 +1,16 @@
-.ztree * {
+.lego-tree * {
     padding: 0;
     margin: 0;
     font-size: 14px;
 }
 
-.ztree {
+.lego-tree {
     margin: 0;
     padding: 5px;
     color: #333
 }
 
-.ztree li {
+.lego-tree li {
     padding: 0;
     margin: 0;
     list-style: none;
@@ -19,20 +19,20 @@
     white-space: nowrap;
     outline: 0
 }
-.ztree li li:hover {
+.lego-tree li li:hover {
     background-color: #f4f9fc;
 }
 
-.ztree li ul {
+.lego-tree li ul {
     margin: 0;
     padding: 0 0 0 18px
 }
 
-.ztree li ul.line {
+.lego-tree li ul.line {
     // background: url(./img/line_conn.gif) 0 0 repeat-y;
 }
 
-.ztree li a {
+.lego-tree li a {
     padding: 1px 3px 0 0;
     margin: 0;
     cursor: pointer;
@@ -44,28 +44,28 @@
     display: inline-block
 }
 
-.ztree li a:hover,
-.ztree li a:hover span.ico_docu,
-.ztree li a:hover span.ico_open,
-.ztree li a:hover span.ico_close,
-.ztree li a:hover span.root_close,
-.ztree li a:hover span.hby_ico_docu,
-.ztree li a:hover span.hby_ico_open,
-.ztree li a:hover span.hby_ico_close,
-.ztree li a:hover span.hby_root_close,
-.ztree li a.curSelectedNode,
-.ztree li a.curSelectedNode span.ico_close,
-.ztree li a.curSelectedNode span.root_close,
-.ztree li a.curSelectedNode span.ico_open,
-.ztree li a.curSelectedNode span.ico_docu,
-.ztree li a.curSelectedNode span.hby_ico_close,
-.ztree li a.curSelectedNode span.hby_root_close,
-.ztree li a.curSelectedNode span.hby_ico_open,
-.ztree li a.curSelectedNode span.hby_ico_docu {
+.lego-tree li a:hover,
+.lego-tree li a:hover span.ico_docu,
+.lego-tree li a:hover span.ico_open,
+.lego-tree li a:hover span.ico_close,
+.lego-tree li a:hover span.root_close,
+.lego-tree li a:hover span.hby_ico_docu,
+.lego-tree li a:hover span.hby_ico_open,
+.lego-tree li a:hover span.hby_ico_close,
+.lego-tree li a:hover span.hby_root_close,
+.lego-tree li a.curSelectedNode,
+.lego-tree li a.curSelectedNode span.ico_close,
+.lego-tree li a.curSelectedNode span.root_close,
+.lego-tree li a.curSelectedNode span.ico_open,
+.lego-tree li a.curSelectedNode span.ico_docu,
+.lego-tree li a.curSelectedNode span.hby_ico_close,
+.lego-tree li a.curSelectedNode span.hby_root_close,
+.lego-tree li a.curSelectedNode span.hby_ico_open,
+.lego-tree li a.curSelectedNode span.hby_ico_docu {
     color: #3399fe;
 }
 
-.ztree li a.tmpTargetNode_inner {
+.lego-tree li a.tmpTargetNode_inner {
     padding-top: 0px;
     background-color: #316AC5;
     color: white;
@@ -75,11 +75,11 @@
     filter: alpha(opacity=80)
 }
 
-.ztree li a.tmpTargetNode_prev {}
+.lego-tree li a.tmpTargetNode_prev {}
 
-.ztree li a.tmpTargetNode_next {}
+.lego-tree li a.tmpTargetNode_next {}
 
-.ztree li a input.rename {
+.lego-tree li a input.rename {
     height: 14px;
     width: 80px;
     padding: 0;
@@ -89,12 +89,12 @@
     *border: 0px
 }
 
-.ztree li span {
+.lego-tree li span {
     line-height: 16px;
     margin-right: 2px
 }
 
-.ztree li span.button {
+.lego-tree li span.button {
     font-family: 'hbyicon';
     color: #bbb;
     line-height: 25px;
@@ -111,34 +111,34 @@
     *background-image: url("./img/zTreeStandard.gif")*/
 }
 
-// .ztree li span.button:not(.switch):before {
+// .lego-tree li span.button:not(.switch):before {
 // }
-.ztree li span.folder_ico_open,
-.ztree li span.folder_ico_close {
+.lego-tree li span.folder_ico_open,
+.lego-tree li span.folder_ico_close {
     width: 20px;
     margin-left: 3px;
 }
 
-.ztree li span.folder_ico_open:before,
-.ztree li span.folder_ico_close:before {
+.lego-tree li span.folder_ico_open:before,
+.lego-tree li span.folder_ico_close:before {
     content: "\e90b";
     width: 16px;
     height: 16px;
     color: #ffb700;
 }
 
-.ztree li span.button.chk {
+.lego-tree li span.button.chk {
     width: 13px;
     height: 25px;
     margin: 2px 2px 0 3px;
     cursor: auto
 }
 
-.ztree li span.button.chk.checkbox_false_full:before,
-.ztree li span.button.chk.checkbox_false_full_focus:before,
-.ztree li span.button.chk.checkbox_false_part:before,
-.ztree li span.button.chk.checkbox_false_part_focus:before
-/*.ztree li span.button.chk.checkbox_false_disable:before*/
+.lego-tree li span.button.chk.checkbox_false_full:before,
+.lego-tree li span.button.chk.checkbox_false_full_focus:before,
+.lego-tree li span.button.chk.checkbox_false_part:before,
+.lego-tree li span.button.chk.checkbox_false_part_focus:before
+/*.lego-tree li span.button.chk.checkbox_false_disable:before*/
 
 {
     // content: "\ea53";
@@ -150,22 +150,22 @@
     border-radius: 2px;
 }
 
-.ztree li span.button.chk.checkbox_true_full:before,
-.ztree li span.button.chk.checkbox_true_full_focus:before,
-.ztree li span.button.chk.checkbox_true_part:before,
-.ztree li span.button.chk.checkbox_true_part_focus:before
-/*.ztree li span.button.chk.checkbox_true_disable:before */
+.lego-tree li span.button.chk.checkbox_true_full:before,
+.lego-tree li span.button.chk.checkbox_true_full_focus:before,
+.lego-tree li span.button.chk.checkbox_true_part:before,
+.lego-tree li span.button.chk.checkbox_true_part_focus:before
+/*.lego-tree li span.button.chk.checkbox_true_disable:before */
 
 {
     content: "\ea52";
     color: #3399fe;
 }
 
-.ztree li span.button.chk.radio_false_full:before,
-.ztree li span.button.chk.radio_false_full_focus:before,
-.ztree li span.button.chk.radio_false_part:before,
-.ztree li span.button.chk.radio_false_part_focus:before
-/*.ztree li span.button.chk.radio_false_disable:before*/
+.lego-tree li span.button.chk.radio_false_full:before,
+.lego-tree li span.button.chk.radio_false_full_focus:before,
+.lego-tree li span.button.chk.radio_false_part:before,
+.lego-tree li span.button.chk.radio_false_part_focus:before
+/*.lego-tree li span.button.chk.radio_false_disable:before*/
 
 {
     // content: "\ea56";
@@ -177,30 +177,30 @@
     border-radius: 50%;
 }
 
-.ztree li span.button.chk.radio_true_full:before,
-.ztree li span.button.chk.radio_true_full_focus:before,
-.ztree li span.button.chk.radio_true_part:before,
-.ztree li span.button.chk.radio_true_part_focus:before
-/*.ztree li span.button.chk.radio_true_disable:before */
+.lego-tree li span.button.chk.radio_true_full:before,
+.lego-tree li span.button.chk.radio_true_full_focus:before,
+.lego-tree li span.button.chk.radio_true_part:before,
+.lego-tree li span.button.chk.radio_true_part_focus:before
+/*.lego-tree li span.button.chk.radio_true_disable:before */
 
 {
     content: "\ea55";
     color: #3399fe;
 }
 
-.ztree li span.button.chk.checkbox_false_disable,
-.ztree li span.button.chk.checkbox_true_disable,
-.ztree li span.button.chk.checkbox_false_disable:before,
-.ztree li span.button.chk.checkbox_true_disable:before,
-.ztree li span.button.chk.radio_false_disable,
-.ztree li span.button.chk.radio_true_disable,
-.ztree li span.button.chk.radio_false_disable:before,
-.ztree li span.button.chk.radio_true_disable:before {
+.lego-tree li span.button.chk.checkbox_false_disable,
+.lego-tree li span.button.chk.checkbox_true_disable,
+.lego-tree li span.button.chk.checkbox_false_disable:before,
+.lego-tree li span.button.chk.checkbox_true_disable:before,
+.lego-tree li span.button.chk.radio_false_disable,
+.lego-tree li span.button.chk.radio_true_disable,
+.lego-tree li span.button.chk.radio_false_disable:before,
+.lego-tree li span.button.chk.radio_true_disable:before {
     width: 0;
     content: "";
 }
 
-.ztree li span.button.switch {
+.lego-tree li span.button.switch {
     width: 16px;
     height: 25px;
     margin-top: 1px;
@@ -209,16 +209,16 @@
     color: #666;
 }
 
-.ztree li span.button.center_open:before,
-.ztree li span.button.bottom_open:before,
-.ztree li span.button.root_open:before,
-.ztree li span.button.roots_open:before,
-.ztree li span.button.noline_open:before,
-.ztree li span.button.hby_center_open:before,
-.ztree li span.button.hby_bottom_open:before,
-.ztree li span.button.hby_root_open:before,
-.ztree li span.button.hby_roots_open:before,
-.ztree li span.button.hby_noline_open:before {
+.lego-tree li span.button.center_open:before,
+.lego-tree li span.button.bottom_open:before,
+.lego-tree li span.button.root_open:before,
+.lego-tree li span.button.roots_open:before,
+.lego-tree li span.button.noline_open:before,
+.lego-tree li span.button.hby_center_open:before,
+.lego-tree li span.button.hby_bottom_open:before,
+.lego-tree li span.button.hby_root_open:before,
+.lego-tree li span.button.hby_roots_open:before,
+.lego-tree li span.button.hby_noline_open:before {
     // content: "\e90a";
     display: inline-block;
     width: 0;
@@ -232,16 +232,16 @@
     border-left: 0.3em solid transparent;
 }
 
-.ztree li span.button.center_close:before,
-.ztree li span.button.bottom_close:before,
-.ztree li span.button.root_close:before,
-.ztree li span.button.roots_close:before,
-.ztree li span.button.noline_close:before,
-.ztree li span.button.hby_center_close:before,
-.ztree li span.button.hby_bottom_close:before,
-.ztree li span.button.hby_root_close:before,
-.ztree li span.button.hby_roots_close:before,
-.ztree li span.button.hby_noline_close:before {
+.lego-tree li span.button.center_close:before,
+.lego-tree li span.button.bottom_close:before,
+.lego-tree li span.button.root_close:before,
+.lego-tree li span.button.roots_close:before,
+.lego-tree li span.button.noline_close:before,
+.lego-tree li span.button.hby_center_close:before,
+.lego-tree li span.button.hby_bottom_close:before,
+.lego-tree li span.button.hby_root_close:before,
+.lego-tree li span.button.hby_roots_close:before,
+.lego-tree li span.button.hby_noline_close:before {
     // content: "\e90c";
     display: inline-block;
     width: 0;
@@ -255,77 +255,77 @@
     border-left: 0.3em solid;
 }
 
-.ztree li span.button.root_docu {
+.lego-tree li span.button.root_docu {
     background: none;
 }
 
-.ztree li span.button.roots_docu {
+.lego-tree li span.button.roots_docu {
     background-position: -56px 0
 }
 
-.ztree li span.button.center_docu {
+.lego-tree li span.button.center_docu {
     background-position: -56px -18px
 }
 
-.ztree li span.button.bottom_docu {
+.lego-tree li span.button.bottom_docu {
     background-position: -56px -36px
 }
 
-.ztree li span.button.noline_docu {
+.lego-tree li span.button.noline_docu {
     background: none;
 }
 
-.ztree li span.button.add,
-.ztree li span.button.edit,
-.ztree li span.button.remove {
+.lego-tree li span.button.add,
+.lego-tree li span.button.edit,
+.lego-tree li span.button.remove {
     font-family: 'anticon';
     font-size: 12px;
 }
 
-.ztree li span.button.ico_docu {
+.lego-tree li span.button.ico_docu {
     margin-left: 2px;
     vertical-align: top;
     *vertical-align: middle;
     width: 0;
 }
 
-.ztree li span.button.hby_ico_docu,
-.ztree li span.button.ico_open,
-.ztree li span.button.ico_close,
-.ztree li span.button.hby_ico_open,
-.ztree li span.button.hby_ico_close,
-.ztree li span.button.add,
-.ztree li span.button.edit,
-.ztree li span.button.remove {
+.lego-tree li span.button.hby_ico_docu,
+.lego-tree li span.button.ico_open,
+.lego-tree li span.button.ico_close,
+.lego-tree li span.button.hby_ico_open,
+.lego-tree li span.button.hby_ico_close,
+.lego-tree li span.button.add,
+.lego-tree li span.button.edit,
+.lego-tree li span.button.remove {
     margin-right: 4px;
     vertical-align: top;
     *vertical-align: middle
 }
 
-.ztree li span.button.ico_docu:before {
+.lego-tree li span.button.ico_docu:before {
     // content: "\e909";
     content: "";
 }
 
-.ztree li span.button.add:before {
+.lego-tree li span.button.add:before {
     content: "\E625";
 }
 
-.ztree li span.button.edit:before {
+.lego-tree li span.button.edit:before {
     content: "\E692";
 }
 
-.ztree li span.button.remove:before {
+.lego-tree li span.button.remove:before {
     content: "\E623";
 }
 
-.ztree li a span.button.add:hover,
-.ztree li a span.button.edit:hover,
-.ztree li a span.button.remove:hover {
+.lego-tree li a span.button.add:hover,
+.lego-tree li a span.button.edit:hover,
+.lego-tree li a span.button.remove:hover {
     color: #62d35d;
 }
 
-.ztree li span.button.ico_loading {
+.lego-tree li span.button.ico_loading {
     margin-right: 2px;
     background: url(./img/loading.gif) no-repeat scroll 0 0 transparent;
     vertical-align: top;
@@ -354,7 +354,7 @@ span.tmpzTreeMove_arrow {
     // *background-image: url("./img/zTreeStandard.gif")
 }
 
-ul.ztree.zTreeDragUL {
+ul.lego-tree.zTreeDragUL {
     margin: 0;
     padding: 0;
     position: absolute;
