--- a/src/modal/asset/index.scss
+++ b/src/modal/asset/index.scss
@@ -23,7 +23,9 @@
     z-index: 1000 !important;
     top: 66px;
 }
-
+#lego-modal .modal-dialog{
+    max-width: 600px;
+}
 .modal-content {
     border: none;
     box-shadow: 0 2px 10px rgba(0,0,0,.3);
@@ -82,7 +84,7 @@
 .right-modalBg .modal-backdrop {
     opacity: 0.01;
 }
-
+.middle,
 .dialog-modal {
     display: flex !important;
     justify-content: center;
