--- a/src/tree/asset/index.scss
+++ b/src/tree/asset/index.scss
@@ -19,9 +19,9 @@
     white-space: nowrap;
     outline: 0
 }
-.lego-tree li li:hover {
-    background-color: #f4f9fc;
-}
+// .lego-tree li li:hover {
+//     background-color: #f4f9fc;
+// }
 
 .lego-tree li ul {
     margin: 0;
