--- a/src/avatar/asset/index.scss
+++ b/src/avatar/asset/index.scss
@@ -14,6 +14,7 @@
 .avatar-img{
 	width: 40px;
 	height: 40px;
+	background-image: url(./img/media-user.png);
 	background-size: cover;
 	overflow: hidden;
 	position: relative;
@@ -33,6 +34,9 @@
 }
 .avatar-item.addbtn{
 	vertical-align: top;
+}
+.avatar-item.addbtn .avatar-img{
+	background-image: none;
 }
 .avatar-item.addbtn .avatar-img i{
     display: flex !important;
