--- a/src/search/asset/index.scss
+++ b/src/search/asset/index.scss
@@ -1,12 +1,12 @@
-.search input,
-.search input:focus {
+.lego-search input,
+.lego-search input:focus {
     height: 36px;
     padding: 7px 12px;
     -webkit-box-shadow: none;
     box-shadow: none;
 }
 
-.search .search-button {
+.lego-search .lego-search-button {
     padding: 7px 12px;
     // background: #f3f3f3;
     border: 1px solid #ddd;
@@ -15,15 +15,15 @@
     border-radius: 4px;
 }
 
-.search .search-button i {
+.lego-search .lego-search-button i {
     color: #999;
 }
 
-.search .search-button:hover i {
+.lego-search .lego-search-button:hover i {
     color: #0275d8;
 }
 
-.search .dropdown-toggle {
+.lego-search .dropdown-toggle {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
@@ -33,21 +33,21 @@
     border: 1px solid #ddd;
 }
 
-.search.input-group .search-input {
+.lego-search.input-group .lego-search-input {
     border-right: none;
 }
 
-.search.input-group .search-input:active,
-.input-group .search-input:focus,
-.input-group .search-input:hover {
+.lego-search.input-group .lego-search-input:active,
+.input-group .lego-search-input:focus,
+.input-group .lego-search-input:hover {
     border-right: none;
 }
 
-.input-group.search .search-input:focus,
-.input-group.search .search-input:focus ~ .input-group-btn .btn {
+.input-group.lego-search .lego-search-input:focus,
+.input-group.lego-search .lego-search-input:focus ~ .input-group-btn .btn {
     border-color: #66afe9 !important;
 }
-.input-group.search .input-group-btn:not(:first-child)>.btn,
-.input-group.search .input-group-btn:not(:first-child)>.btn-group {
+.input-group.lego-search .input-group-btn:not(:first-child)>.btn,
+.input-group.lego-search .input-group-btn:not(:first-child)>.btn-group {
     margin-left: -2px;
 }
