--- a/src/upload/asset/index.scss
+++ b/src/upload/asset/index.scss
@@ -1,22 +1,22 @@
-.upload .upload-container {
+.lego-upload .lego-upload-container {
     margin-top: 8px;
 }
 
-.upload .addbtn i {
+.lego-upload .lego-addbtn i {
     font-size: 16px;
     display: inline-block;
 }
 
-.upload .cancelbtn {
+.lego-upload .lego-cancelbtn {
     zoom: 0.8;
 }
 
-.upload .closebtn {
+.lego-upload .lego-closebtn {
     zoom: 0.8;
     display: none;
 }
 
-.upload .upload-item {
+.lego-upload .lego-upload-item {
     position: relative;
     padding: 8px;
     border-radius: 3px;
@@ -25,17 +25,17 @@
     // border-bottom-color: #ddd;
 }
 
-.upload .upload-item:hover {
+.lego-upload .lego-upload-item:hover {
     // background-color: #ececec;
     border-color: #c5c5c5;
 }
 
-.upload .upload-item .media-left i {
+.lego-upload .lego-upload-item .media-left i {
     font-size: 40px;
     color: #f90;
 }
 
-.upload .upload-item .media-body .media-heading {
+.lego-upload .lego-upload-item .media-body .media-heading {
     margin-right: 40px;
     font-size: 14px;
     font-weight: normal;
@@ -44,35 +44,35 @@
     word-break: break-all;
 }
 
-.upload .upload-item .media-body .media-heading .right {
+.lego-upload .lego-upload-item .media-body .media-heading .right {
     position: absolute;
     top: 8px;
     right: 8px;
 }
 
-.upload .upload-item .media-body .media-heading .right a {
+.lego-upload .lego-upload-item .media-body .media-heading .right a {
     margin-left: 8px;
 }
 
-.upload .upload-item .media-body small {
+.lego-upload .lego-upload-item .media-body small {
     margin-top: 8px;
     color: #999;
 }
 
-.upload .upload-item .media-body small cite {
+.lego-upload .lego-upload-item .media-body small cite {
     font-style: inherit;
 }
 
-.upload .upload-item .media-body small time {
+.lego-upload .lego-upload-item .media-body small time {
     display: none;
     margin-left: 15px;
 }
 
-.upload .upload-item .media-body small time a {
+.lego-upload .lego-upload-item .media-body small time a {
     margin-left: 5px;
 }
 
-.upload .upload-item .media-body .progress {
+.lego-upload .lego-upload-item .media-body .progress {
     margin-bottom: 0;
     margin-top: 15px;
     height: 3px;
@@ -81,12 +81,12 @@
     box-shadow: none;
 }
 
-.upload .upload-item .media-body .progress-bar {
+.lego-upload .lego-upload-item .media-body .progress-bar {
     -webkit-box-shadow: none;
     box-shadow: none;
 }
 
-.upload .upload-item:hover .closebtn,
-.upload .upload-item:hover small time {
+.lego-upload .lego-upload-item:hover .lego-closebtn,
+.lego-upload .lego-upload-item:hover small time {
     display: inline-block;
 }
