--- a/asset/scss/bootstrap/_variables.scss
+++ b/asset/scss/bootstrap/_variables.scss
@@ -48,7 +48,7 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             #03a9f4 !default;
+$brand-primary:             #01a8fe !default;
 $brand-success:             #48d9a1 !default;
 $brand-info:                #00bcd4 !default;
 $brand-warning:             #fdd835 !default;
