--- a/src/dropdown/asset/index.scss
+++ b/src/dropdown/asset/index.scss
@@ -65,14 +65,13 @@
     background-color: #3399fe;
 }
 
-.dropdown-menu > .disabled > a,
-.dropdown-menu > .disabled > a:hover,
-.dropdown-menu > .disabled > a:focus {
-    color: #777777;
-}
-
-.dropdown-menu > .disabled > a:hover,
-.dropdown-menu > .disabled > a:focus {
+.dropdown-menu .disabled > a,
+.dropdown-menu .disabled > a:hover,
+.dropdown-menu .disabled > a:focus,
+.dropdown-menu a.disabled,
+.dropdown-menu a.disabled:hover,
+.dropdown-menu a.disabled:focus {
+    color: #777;
     text-decoration: none;
     background-color: transparent;
     background-image: none;
@@ -102,7 +101,7 @@
     padding: 3px 20px;
     font-size: 12px;
     line-height: 1.42857143;
-    color: #777777;
+    color: #777;
     white-space: nowrap;
 }
 
