--- a/asset/scss/themes/_style-1.scss
+++ b/asset/scss/themes/_style-1.scss
@@ -59,6 +59,12 @@ pre p {
 }
 .noborder{
     border: none !important;
+    padding: 5px;
+}
+.noborder:hover,
+.noborder:focus{
+    border: 1px solid #ddd !important;
+    padding: 4px !important;
 }
 .markdown {
     color: #666;
