--- a/src/dropdown/asset/index.scss
+++ b/src/dropdown/asset/index.scss
@@ -14,7 +14,7 @@
     z-index: 1000;
     display: none;
     float: left;
-    min-width: auto;
+    min-width: 160px;
     padding: 5px 0;
     margin: 0px 0 0;
     list-style: none;
