--- a/src/reply/asset/index.scss
+++ b/src/reply/asset/index.scss
@@ -51,3 +51,6 @@
 .lego-reply .popover.popover-bottom:before {
     left: 50px;
 }
+// .lego-reply .dropdown-menu{
+//     min-width: auto !important;
+// }
