--- a/src/dropdown/asset/index.scss
+++ b/src/dropdown/asset/index.scss
@@ -46,7 +46,7 @@
     font-weight: normal;
     line-height: 1.42857143;
     color: #333333;
-    white-space: nowrap;
+    // white-space: nowrap;
 }
 
 .dropdown-menu > li > a:hover,
