--- a/src/selects/asset/index.scss
+++ b/src/selects/asset/index.scss
@@ -133,3 +133,6 @@
     outline: 0;
     border-radius: 4px;
 }
+.select .select-input.form-control[readonly] {
+    background-color: transparent;
+}
