--- a/src/reply/asset/index.scss
+++ b/src/reply/asset/index.scss
@@ -37,6 +37,7 @@
     max-width: 400px;
     margin-top: 0px;
     width: 100%;
+    z-index: 500;
     box-shadow: 0 2px 4px rgba(0,0,0,.2);
 }
 .lego-reply .popover.show{
