--- a/src/editcom/asset/index.scss
+++ b/src/editcom/asset/index.scss
@@ -1,4 +1,6 @@
 .lego-editcom{
+	display: flex;
+    align-items: center;
 	line-height: 25px;
 	min-width: 20px;
     min-height: 20px;
@@ -10,18 +12,19 @@
 .lego-editcom > i{
 	display: none;
 	cursor: pointer;
-    margin-top: 3px;
-    line-height: 36px;
+    // line-height: 36px;
     margin-left: 5px;
 }
 .lego-editcom.sm > i{
-    line-height: 20px;
+    // line-height: 20px;
 }
 .lego-editcom:hover > i{
 	display: inline-block;
 }
 .lego-editcom > i.edit{
-	zoom: 1.3;
+ //    margin-top: 2px;
+	// zoom: 1.3;
+	font-size: 20px;
 }
 .lego-editcom > i.edit:hover{
 	color: #48d9a1;
