--- a/src/editcom/asset/index.scss
+++ b/src/editcom/asset/index.scss
@@ -16,7 +16,7 @@
     margin-left: 5px;
 }
 .lego-editcom.sm > i{
-    // line-height: 20px;
+    line-height: 25px;
 }
 .lego-editcom:hover > i{
 	display: inline-block;
