--- a/asset/fonts/iconfont/iconfont.css
+++ b/asset/fonts/iconfont/iconfont.css
@@ -14,231 +14,231 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-weixin:before { content: "\e603"; }
+.lego-icon-weixin:before { content: "\e603"; }
 
-.icon-more-1:before { content: "\e620"; }
+.lego-icon-more-1:before { content: "\e620"; }
 
-.icon-qq:before { content: "\e636"; }
+.lego-icon-qq:before { content: "\e636"; }
 
-.icon-unie61d:before { content: "\e60a"; }
+.lego-icon-unie61d:before { content: "\e60a"; }
 
-.icon-qzone:before { content: "\e604"; }
+.lego-icon-qzone:before { content: "\e604"; }
 
-.icon-erweima:before { content: "\e61c"; }
+.lego-icon-erweima:before { content: "\e61c"; }
 
-.icon-collect:before { content: "\e600"; }
+.lego-icon-collect:before { content: "\e600"; }
 
-.icon-checkbox:before { content: "\e731"; }
+.lego-icon-checkbox:before { content: "\e731"; }
 
-.icon-delete:before { content: "\e74b"; }
+.lego-icon-delete:before { content: "\e74b"; }
 
-.icon-xiazai:before { content: "\e8b1"; }
+.lego-icon-xiazai:before { content: "\e8b1"; }
 
-.icon-full:before { content: "\e605"; }
+.lego-icon-full:before { content: "\e605"; }
 
-.icon-set:before { content: "\e607"; }
+.lego-icon-set:before { content: "\e607"; }
 
-.icon-expenses:before { content: "\e609"; }
+.lego-icon-expenses:before { content: "\e609"; }
 
-.icon-logo:before { content: "\e610"; }
+.lego-icon-logo:before { content: "\e610"; }
 
-.icon-crm:before { content: "\e611"; }
+.lego-icon-crm:before { content: "\e611"; }
 
-.icon-office-params:before { content: "\e612"; }
+.lego-icon-office-params:before { content: "\e612"; }
 
-.icon-products:before { content: "\e613"; }
+.lego-icon-products:before { content: "\e613"; }
 
-.icon-com-manage:before { content: "\e615"; }
+.lego-icon-com-manage:before { content: "\e615"; }
 
-.icon-purchase:before { content: "\e616"; }
+.lego-icon-purchase:before { content: "\e616"; }
 
-.icon-admin:before { content: "\e617"; }
+.lego-icon-admin:before { content: "\e617"; }
 
-.icon-roles:before { content: "\e618"; }
+.lego-icon-roles:before { content: "\e618"; }
 
-.icon-powers:before { content: "\e61a"; }
+.lego-icon-powers:before { content: "\e61a"; }
 
-.icon-contacts:before { content: "\e61b"; }
+.lego-icon-contacts:before { content: "\e61b"; }
 
-.icon-clients:before { content: "\e61e"; }
+.lego-icon-clients:before { content: "\e61e"; }
 
-.icon-reports:before { content: "\e61f"; }
+.lego-icon-reports:before { content: "\e61f"; }
 
-.icon-settings:before { content: "\e621"; }
+.lego-icon-settings:before { content: "\e621"; }
 
-.icon-approvals:before { content: "\e622"; }
+.lego-icon-approvals:before { content: "\e622"; }
 
-.icon-schedules:before { content: "\e623"; }
+.lego-icon-schedules:before { content: "\e623"; }
 
-.icon-biz:before { content: "\e624"; }
+.lego-icon-biz:before { content: "\e624"; }
 
-.icon-markets:before { content: "\e625"; }
+.lego-icon-markets:before { content: "\e625"; }
 
-.icon-tasks:before { content: "\e626"; }
+.lego-icon-tasks:before { content: "\e626"; }
 
-.icon-refull:before { content: "\e627"; }
+.lego-icon-refull:before { content: "\e627"; }
 
-.icon-d-arrow-left:before { content: "\e628"; }
+.lego-icon-d-arrow-left:before { content: "\e628"; }
 
-.icon-home:before { content: "\e629"; }
+.lego-icon-home:before { content: "\e629"; }
 
-.icon-dm:before { content: "\e62a"; }
+.lego-icon-dm:before { content: "\e62a"; }
 
-.icon-analysis:before { content: "\e62b"; }
+.lego-icon-analysis:before { content: "\e62b"; }
 
-.icon-friends:before { content: "\e62c"; }
+.lego-icon-friends:before { content: "\e62c"; }
 
-.icon-e-dropdown:before { content: "\e62e"; }
+.lego-icon-e-dropdown:before { content: "\e62e"; }
 
-.icon-clues:before { content: "\e62f"; }
+.lego-icon-clues:before { content: "\e62f"; }
 
-.icon-s-dropdown:before { content: "\e630"; }
+.lego-icon-s-dropdown:before { content: "\e630"; }
 
-.icon-params:before { content: "\e631"; }
+.lego-icon-params:before { content: "\e631"; }
 
-.icon-dashboard:before { content: "\e632"; }
+.lego-icon-dashboard:before { content: "\e632"; }
 
-.icon-field:before { content: "\e633"; }
+.lego-icon-field:before { content: "\e633"; }
 
-.icon-teamwork:before { content: "\e634"; }
+.lego-icon-teamwork:before { content: "\e634"; }
 
-.icon-forecast:before { content: "\e635"; }
+.lego-icon-forecast:before { content: "\e635"; }
 
-.icon-email-settings:before { content: "\e637"; }
+.lego-icon-email-settings:before { content: "\e637"; }
 
-.icon-targets:before { content: "\e638"; }
+.lego-icon-targets:before { content: "\e638"; }
 
-.icon-knowledge:before { content: "\e639"; }
+.lego-icon-knowledge:before { content: "\e639"; }
 
-.icon-account-info:before { content: "\e63a"; }
+.lego-icon-account-info:before { content: "\e63a"; }
 
-.icon-ex-menu:before { content: "\e63b"; }
+.lego-icon-ex-menu:before { content: "\e63b"; }
 
-.icon-edit:before { content: "\e63d"; }
+.lego-icon-edit:before { content: "\e63d"; }
 
-.icon-play:before { content: "\e640"; }
+.lego-icon-play:before { content: "\e640"; }
 
-.icon-text-edit:before { content: "\e641"; }
+.lego-icon-text-edit:before { content: "\e641"; }
 
-.icon-email-draft:before { content: "\e642"; }
+.lego-icon-email-draft:before { content: "\e642"; }
 
-.icon-trip:before { content: "\e643"; }
+.lego-icon-trip:before { content: "\e643"; }
 
-.icon-timing-email:before { content: "\e644"; }
+.lego-icon-timing-email:before { content: "\e644"; }
 
-.icon-print:before { content: "\e645"; }
+.lego-icon-print:before { content: "\e645"; }
 
-.icon-likes:before { content: "\e646"; }
+.lego-icon-likes:before { content: "\e646"; }
 
-.icon-attachment:before { content: "\e647"; }
+.lego-icon-attachment:before { content: "\e647"; }
 
-.icon-pay:before { content: "\e648"; }
+.lego-icon-pay:before { content: "\e648"; }
 
-.icon-more:before { content: "\e649"; }
+.lego-icon-more:before { content: "\e649"; }
 
-.icon-shut:before { content: "\e64a"; }
+.lego-icon-shut:before { content: "\e64a"; }
 
-.icon-close:before { content: "\e64b"; }
+.lego-icon-close:before { content: "\e64b"; }
 
-.icon-unflag:before { content: "\e64c"; }
+.lego-icon-unflag:before { content: "\e64c"; }
 
-.icon-flag:before { content: "\e64d"; }
+.lego-icon-flag:before { content: "\e64d"; }
 
-.icon-emer-mail:before { content: "\e64e"; }
+.lego-icon-emer-mail:before { content: "\e64e"; }
 
-.icon-disabled:before { content: "\e64f"; }
+.lego-icon-disabled:before { content: "\e64f"; }
 
-.icon-build:before { content: "\e650"; }
+.lego-icon-build:before { content: "\e650"; }
 
-.icon-absence:before { content: "\e651"; }
+.lego-icon-absence:before { content: "\e651"; }
 
-.icon-comment:before { content: "\e652"; }
+.lego-icon-comment:before { content: "\e652"; }
 
-.icon-filter:before { content: "\e653"; }
+.lego-icon-filter:before { content: "\e653"; }
 
-.icon-enabled:before { content: "\e654"; }
+.lego-icon-enabled:before { content: "\e654"; }
 
-.icon-del:before { content: "\e656"; }
+.lego-icon-del:before { content: "\e656"; }
 
-.icon-transport-list:before { content: "\e657"; }
+.lego-icon-transport-list:before { content: "\e657"; }
 
-.icon-keep:before { content: "\e658"; }
+.lego-icon-keep:before { content: "\e658"; }
 
-.icon-menu-app:before { content: "\e659"; }
+.lego-icon-menu-app:before { content: "\e659"; }
 
-.icon-inbox:before { content: "\e65a"; }
+.lego-icon-inbox:before { content: "\e65a"; }
 
-.icon-search:before { content: "\e65b"; }
+.lego-icon-search:before { content: "\e65b"; }
 
-.icon-notice:before { content: "\e65c"; }
+.lego-icon-notice:before { content: "\e65c"; }
 
-.icon-eg-apply:before { content: "\e65d"; }
+.lego-icon-eg-apply:before { content: "\e65d"; }
 
-.icon-drag:before { content: "\e65e"; }
+.lego-icon-drag:before { content: "\e65e"; }
 
-.icon-folder:before { content: "\e65f"; }
+.lego-icon-folder:before { content: "\e65f"; }
 
-.icon-question:before { content: "\e660"; }
+.lego-icon-question:before { content: "\e660"; }
 
-.icon-arrow-down:before { content: "\e661"; }
+.lego-icon-arrow-down:before { content: "\e661"; }
 
-.icon-caret-bottom:before { content: "\e662"; }
+.lego-icon-caret-bottom:before { content: "\e662"; }
 
-.icon-write-letter:before { content: "\e663"; }
+.lego-icon-write-letter:before { content: "\e663"; }
 
-.icon-mail-read:before { content: "\e664"; }
+.lego-icon-mail-read:before { content: "\e664"; }
 
-.icon-pause:before { content: "\e665"; }
+.lego-icon-pause:before { content: "\e665"; }
 
-.icon-expand:before { content: "\e666"; }
+.lego-icon-expand:before { content: "\e666"; }
 
-.icon-mail-send:before { content: "\e667"; }
+.lego-icon-mail-send:before { content: "\e667"; }
 
-.icon-forwarded:before { content: "\e668"; }
+.lego-icon-forwarded:before { content: "\e668"; }
 
-.icon-subfile:before { content: "\e669"; }
+.lego-icon-subfile:before { content: "\e669"; }
 
-.icon-email:before { content: "\e66a"; }
+.lego-icon-email:before { content: "\e66a"; }
 
-.icon-arrow-left:before { content: "\e66b"; }
+.lego-icon-arrow-left:before { content: "\e66b"; }
 
-.icon-arrow-right:before { content: "\e66c"; }
+.lego-icon-arrow-right:before { content: "\e66c"; }
 
-.icon-arrow-up:before { content: "\e74d"; }
+.lego-icon-arrow-up:before { content: "\e74d"; }
 
-.icon-redo:before { content: "\e67a"; }
+.lego-icon-redo:before { content: "\e67a"; }
 
-.icon-undo:before { content: "\e67b"; }
+.lego-icon-undo:before { content: "\e67b"; }
 
-.icon-interactive:before { content: "\e66d"; }
+.lego-icon-interactive:before { content: "\e66d"; }
 
-.icon-background:before { content: "\e66e"; }
+.lego-icon-background:before { content: "\e66e"; }
 
-.icon-image:before { content: "\e66f"; }
+.lego-icon-image:before { content: "\e66f"; }
 
-.icon-shape:before { content: "\e670"; }
+.lego-icon-shape:before { content: "\e670"; }
 
-.icon-left-alignment:before { content: "\e671"; }
+.lego-icon-left-alignment:before { content: "\e671"; }
 
-.icon-chuizhijuzhong:before { content: "\e672"; }
+.lego-icon-chuizhijuzhong:before { content: "\e672"; }
 
-.icon-top-alignment:before { content: "\e673"; }
+.lego-icon-top-alignment:before { content: "\e673"; }
 
-.icon-bottom-alignment:before { content: "\e674"; }
+.lego-icon-bottom-alignment:before { content: "\e674"; }
 
-.icon-center:before { content: "\e675"; }
+.lego-icon-center:before { content: "\e675"; }
 
-.icon-text:before { content: "\e676"; }
+.lego-icon-text:before { content: "\e676"; }
 
-.icon-copy:before { content: "\e677"; }
+.lego-icon-copy:before { content: "\e677"; }
 
-.icon-back:before { content: "\e678"; }
+.lego-icon-back:before { content: "\e678"; }
 
-.icon-add:before { content: "\e679"; }
+.lego-icon-add:before { content: "\e679"; }
 
-.icon-grid:before { content: "\e67c"; }
+.lego-icon-grid:before { content: "\e67c"; }
 
-.icon-export:before { content: "\e62d"; }
+.lego-icon-export:before { content: "\e62d"; }
 
-.icon-upload-lists-copy:before { content: "\e74e"; }
+.lego-icon-upload-lists-copy:before { content: "\e74e"; }
 
