--- a/src/pagination/asset/index.scss
+++ b/src/pagination/asset/index.scss
@@ -5,19 +5,19 @@
 /* ---------------------------------------------------------------------- */
 
 // @import "../../../asset/scss/bootstrap/variables";
-.pagination {
+.lego-pagination {
     display: inline-block;
     padding-left: 0;
     margin: 0;
     border-radius: 4px;
 }
 
-.pagination > li {
+.lego-pagination > li {
     display: inline;
 }
 
-.pagination > li > a,
-.pagination > li > span {
+.lego-pagination > li > a,
+.lego-pagination > li > span {
     position: relative;
     float: left;
     padding: 7px 12px;
@@ -29,35 +29,35 @@
     margin-left: -1px;
 }
 
-.pagination > li:first-child > a,
-.pagination > li:first-child > span {
+.lego-pagination > li:first-child > a,
+.lego-pagination > li:first-child > span {
     margin-left: 0;
     border-bottom-left-radius: 4px;
     border-top-left-radius: 4px;
 }
 
-.pagination > li:last-child > a,
-.pagination > li:last-child > span {
+.lego-pagination > li:last-child > a,
+.lego-pagination > li:last-child > span {
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
 }
 
-.pagination > li > a:hover,
-.pagination > li > a:focus,
-.pagination > li > span:hover,
-.pagination > li > span:focus {
+.lego-pagination > li > a:hover,
+.lego-pagination > li > a:focus,
+.lego-pagination > li > span:hover,
+.lego-pagination > li > span:focus {
     z-index: 3;
     color: #0173e3;
     background-color: #eeeeee;
     border-color: #ddd;
 }
 
-.pagination > .active > a,
-.pagination > .active > a:hover,
-.pagination > .active > a:focus,
-.pagination > .active > span,
-.pagination > .active > span:hover,
-.pagination > .active > span:focus {
+.lego-pagination > .active > a,
+.lego-pagination > .active > a:hover,
+.lego-pagination > .active > a:focus,
+.lego-pagination > .active > span,
+.lego-pagination > .active > span:hover,
+.lego-pagination > .active > span:focus {
     z-index: 2;
     color: #fff;
     background-color: #3399fe;
@@ -65,58 +65,58 @@
     cursor: default;
 }
 
-.pagination > .disabled > span,
-.pagination > .disabled > span:hover,
-.pagination > .disabled > span:focus,
-.pagination > .disabled > a,
-.pagination > .disabled > a:hover,
-.pagination > .disabled > a:focus {
+.lego-pagination > .disabled > span,
+.lego-pagination > .disabled > span:hover,
+.lego-pagination > .disabled > span:focus,
+.lego-pagination > .disabled > a,
+.lego-pagination > .disabled > a:hover,
+.lego-pagination > .disabled > a:focus {
     color: #777777;
     background-color: #fff;
     border-color: #ddd;
     cursor: not-allowed;
 }
 
-.pagination-lg > li > a,
-.pagination-lg > li > span {
+.lego-pagination-lg > li > a,
+.lego-pagination-lg > li > span {
     padding: 10px 16px;
     font-size: 18px;
     line-height: 1.3333333;
 }
 
-.pagination-lg > li:first-child > a,
-.pagination-lg > li:first-child > span {
+.lego-pagination-lg > li:first-child > a,
+.lego-pagination-lg > li:first-child > span {
     border-bottom-left-radius: 6px;
     border-top-left-radius: 6px;
 }
 
-.pagination-lg > li:last-child > a,
-.pagination-lg > li:last-child > span {
+.lego-pagination-lg > li:last-child > a,
+.lego-pagination-lg > li:last-child > span {
     border-bottom-right-radius: 6px;
     border-top-right-radius: 6px;
 }
 
-.pagination-sm > li > a,
-.pagination-sm > li > span {
+.lego-pagination-sm > li > a,
+.lego-pagination-sm > li > span {
     padding: 5px 10px;
     font-size: 12px;
     line-height: 1.5;
 }
 
-.pagination-sm > li:first-child > a,
-.pagination-sm > li:first-child > span {
+.lego-pagination-sm > li:first-child > a,
+.lego-pagination-sm > li:first-child > span {
     border-bottom-left-radius: 3px;
     border-top-left-radius: 3px;
 }
 
-.pagination-sm > li:last-child > a,
-.pagination-sm > li:last-child > span {
+.lego-pagination-sm > li:last-child > a,
+.lego-pagination-sm > li:last-child > span {
     border-bottom-right-radius: 3px;
     border-top-right-radius: 3px;
 }
 
-.pagination > li > a,
-.pagination > li > span {
+.lego-pagination > li > a,
+.lego-pagination > li > span {
     margin-left: 5px;
     padding: 5px 10px;
     border-radius: 5px;
@@ -124,33 +124,33 @@
     // color: $brand-primary;
 }
 
-.pagination > .active > a,
-.pagination > .active > a:hover,
-.pagination > .active > span:hover,
-.pagination > .active > a:focus,
-.pagination > .active > span:focus {
+.lego-pagination > .active > a,
+.lego-pagination > .active > a:hover,
+.lego-pagination > .active > span:hover,
+.lego-pagination > .active > a:focus,
+.lego-pagination > .active > span:focus {
     // background-color: $brand-primary;
     // border-color: $brand-primary;
 }
 
-.pagination.squared {
+.lego-pagination.squared {
     border-radius: 0 !important;
 }
 
-.pagination.squared li:first-child a,
-.pagination.squared li:first-child > span {
+.lego-pagination.squared li:first-child a,
+.lego-pagination.squared li:first-child > span {
     border-bottom-left-radius: 0px !important;
     border-left-width: 1px;
     border-top-left-radius: 0px !important;
 }
 
-.pagination.squared li:last-child > a,
-.pagination.squared li:last-child > span {
+.lego-pagination.squared li:last-child > a,
+.lego-pagination.squared li:last-child > span {
     border-bottom-right-radius: 0px !important;
     border-top-right-radius: 0px !important;
 }
 
-.pagination .info {
+.lego-pagination .info {
     border: none;
     cursor: inherit;
     color: #333;
@@ -160,47 +160,47 @@
     display: inline-block;
 }
 
-.pagination .info:hover {
+.lego-pagination .info:hover {
     background-color: transparent;
     color: #333;
 }
-.pagination input,
-.pagination button {
+.lego-pagination input,
+.lego-pagination button {
     background-color: #fff;
     border: 1px solid #ddd;
     color:#666;
     font-size: 14px;
 }
 
-.pagination button .caret {
+.lego-pagination button .caret {
     margin-left: 3px;
 }
 
-.pagination .dropdown-menu {
+.lego-pagination .dropdown-menu {
     // width: 50px;
     min-width: 50px;
 }
 
-.pagination .dropdown-menu a {
+.lego-pagination .dropdown-menu a {
     padding: 2px 10px;
     color: #666;
 }
 
-.pagination .icon {
+.lego-pagination .icon {
     border: none;
 }
 
-.pagination .morepage a {
+.lego-pagination .morepage a {
     border: none;
     font-size: 18px;
     padding: 3px 5px;
 }
 
-.pagination > li > span {
+.lego-pagination > li > span {
     float: none;
 }
 
-.pagination .pageJump {
+.lego-pagination .pageJump {
     width: 50px;
     height: 26px;
     display: inline-block;
