--- a/src/tables/asset/index.scss
+++ b/src/tables/asset/index.scss
@@ -134,6 +134,7 @@
 .lego-table-tbody > tr > td {
     padding: 10px 8px;
     word-break: break-all;
+    line-height: 18px;
 }
 
 .lego-table-thead > tr > th.lego-table-selection-column label,
