--- a/src/tables/asset/index.scss
+++ b/src/tables/asset/index.scss
@@ -354,7 +354,8 @@
     border: none;
     font-weight: bold;
     padding: 5px;
-    background: transparent;
+    background: #fff;
+    color: #666;
     border-radius: 50%;
 }
 .lego-table-fixed-header .lego-table-scroll > .btn.noborder:hover{
