--- a/src/tables/asset/index.scss
+++ b/src/tables/asset/index.scss
@@ -5,7 +5,6 @@
     border-radius: 4px 4px 0 0;
     overflow: hidden;
 }
-
 .lego-table-body {
     -webkit-transition: opacity 0.3s ease;
     transition: opacity 0.3s ease;
@@ -18,6 +17,7 @@
     text-align: left;
     border-radius: 0;
     overflow: hidden;
+    table-layout: fixed;
 }
 
 .lego-table-thead > tr > th {
@@ -134,12 +134,19 @@
 .lego-table-tbody > tr > td {
     padding: 10px 8px;
     word-break: break-all;
-    line-height: 18px;
+    height: 50px;
+    line-height: 20px;
+}
+.lego-nr td{
+    word-break: inherit !important;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .lego-table-thead > tr > th.lego-table-selection-column label,
 .lego-table-tbody > tr > td.lego-table-selection-column label{
-    margin: 0.3rem;
+    margin: 0;
 }
 
 .lego-table-thead > tr > th.lego-table-selection-column,
@@ -329,7 +336,7 @@
     margin-bottom: -15px;
 }
 .lego-table-fixed-header .lego-table-body{
-    top: 52px;
+    top: 50px;
     bottom: 48px;
     width: 100%;
     position: absolute;
